--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "url": "https://github.com/TuNguyenThanh/react-native-image-placeholder.git"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "lfsr": "^0.0.3",
-    "prop-types": "^15.5.10"
+    "prop-types": "^15.5.10",
+    "react-native-fast-image": "^8.3.2",
+    "yarn": "^1.22.5"
   },
   "keywords": [
     "react native image placeholder",
