--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "url": "https://github.com/TuNguyenThanh/react-native-image-placeholder.git"
   },
   "dependencies": {
+    "prop-types": "^15.5.10"
+  },
+  "devDependencies": {
     "lfsr": "^0.0.3",
-    "prop-types": "^15.5.10",
     "react-native-fast-image": "^8.3.2"
   },
   "keywords": [
